<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NTCeen</string>
    <string name="main_page_selected">%s page is selected</string>

    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_chat">Tour</string>
    <string name="title_notifications">Courses</string>
    <string name="title_profile">Notification</string>

    <string name="content_home">Home Screen</string>
    <string name="content_favorite">Favourite Screen</string>
    <string name="content_chat">Chat Screen</string>
    <string name="content_notification">Notification Screen</string>
    <string name="content_profile">Profile Screen</string>

    <string name="empty_value">empty</string>
    <string name="count">10</string>
    <string name="count_update">20</string>

    <string name="mapbox_access_token" translatable="false" tools:ignore="UnusedResources">sk.eyJ1Ijoic3ltb25kbGNyeiIsImEiOiJjbTJxYW8zNnMwcHNhMmtzOGwxZHljYXBiIn0.HQAltaW8E9Sj41l5ngcO7A</string>
</resources>
