<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sscustombottomnavigation.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.sscustombottomnavigation.ui.MapFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.sscustombottomnavigation.ui.TourFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_tour"/>

    <fragment
        android:id="@+id/navigation_courses"
        android:name="com.sscustombottomnavigation.ui.CoursesFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.sscustombottomnavigation.ui.NotificationFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_notification"/>
</navigation>